@@ -3,7 +3,11 @@
 HADOOP_CONF_DIR=/etc/hadoop/conf/
 YARN_CONF_DIR=/etc/hadoop/conf.cloudera.yarn/
 
-$class=sparkfun.TestJ8
+##
+#  spark-shell --master yarn --jars jbtct/ct-0.0.1.jar jbtct/breeze_2.11-0.10.jar --queue testing --num-executors 100
+#  spark-shell --deploy-mode client --master local[*] --jars ../../ct-0.0.1.jar ../../breeze_2.11-0.10.jar --conf spark.executor.extraJavaOptions=-XX:-UseConcMarkSweepGC
+##
+$class=org.jobimtext.run
 
 # testing, shortrunning, longrunnning, default
 queue=testing
